add basic task listing functionality

--- a/public/style.less
+++ b/public/style.less
@@ -53,6 +53,12 @@ h1 {
   font-family: verdana, sans-serif;
 }
 
+.infoWrap {
+  padding: 20px;
+  display: inline-block;
+  font-size: @font-size;
+}
+
 input {
   height: 34px;
   padding: 6px 12px;
@@ -66,6 +72,11 @@ input {
 
 .leftAlign {
   text-align: left;
+}
+
+.taskWrap {
+  height: 100px;
+  box-sizing: border-box;
 }
 
 .columns1 {
