displaing newly created task to page

--- a/public/style.less
+++ b/public/style.less
@@ -74,6 +74,10 @@ input {
   text-align: left;
 }
 
+.pushRight {
+  margin-left: 80px;
+}
+
 .taskWrap {
   height: 100px;
   box-sizing: border-box;
