--- a/public/style.less
+++ b/public/style.less
@@ -40,6 +40,11 @@ button {
   font-size: 0px;
 }
 
+.row h2 {
+  font-size: 20px;
+  display: inline-block;
+}
+
 .cell {
   display: inline-block;
   font-size: @font-size;
@@ -74,6 +79,10 @@ input {
   text-align: left;
 }
 
+.noPadding {
+  padding: 0px;
+}
+
 .pushRight {
   margin-left: 80px;
 }
@@ -81,6 +90,9 @@ input {
 .taskWrap {
   height: 100px;
   box-sizing: border-box;
+  background-color: rgb(255, 0, 67);
+  border-radius: 10px;
+  font-family: helvetica;
 }
 
 .columns1 {
